--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@tailwindcss/vite": "^4.0.9",
+    "@types/leaflet": "^1.9.20",
     "tailwindcss": "^4.0.9"
   }
 }
